--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>last_penny</title>
+  <title>Last Penny Web (Exprimental)</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
