--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Last Penny Web (Exprimental)</title>
+  <title>Last Penny Web (Exprimental) | emiralanyalioglu.com/lastpenny</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -36,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=4230746798');
       });
     }
   </script>
